--- a/WinDivertSharpTests/WinDivertSharpTests.csproj
+++ b/WinDivertSharpTests/WinDivertSharpTests.csproj
@@ -1,57 +1,70 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <OutputType>Library</OutputType>
-    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-    <Platforms>x64;x86</Platforms>
-    <Version>1.0.0.0</Version>
-    <FileVersion>1.0.0.0</FileVersion>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <Product>WinDivertSharpTests</Product>
-    <PackageId>WinDivertSharpTests</PackageId>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
-  </PropertyGroup>
-  
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <OutputPath>bin\Release\x64\</OutputPath>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0-windows</TargetFramework>
+		<OutputType>Library</OutputType>
+		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+		<Platforms>x64;x86</Platforms>
+		<Version>1.0.0.0</Version>
+		<FileVersion>1.0.0.0</FileVersion>
+		<AssemblyVersion>1.0.0.0</AssemblyVersion>
+		<Product>WinDivertSharpTests</Product>
+		<PackageId>WinDivertSharpTests</PackageId>
+		<ApplicationManifest>app.manifest</ApplicationManifest>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <OutputPath>bin\Release\x86\</OutputPath>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<OutputPath>bin\Release\x64\</OutputPath>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <OutputPath>bin\Debug\x64\</OutputPath>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<OutputPath>bin\Release\x86\</OutputPath>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <OutputPath>bin\Debug\x86\</OutputPath>
-  </PropertyGroup>
-  
-  <ItemGroup>
-    <ProjectReference Include="..\WinDivertSharp\WinDivertSharp.csproj" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="NUnit">
-      <Version>3.10.1</Version>
-    </PackageReference>
-    <PackageReference Include="NUnit.Console">
-      <Version>3.8.0</Version>
-    </PackageReference>
-    <PackageReference Include="NUnit3TestAdapter">
-      <Version>3.10.0</Version>
-    </PackageReference>
-    <PackageReference Include="PacketDotNet">
-      <Version>0.19.1</Version>
-    </PackageReference>
-  </ItemGroup>
- 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="sc stop WinDivert1.4&#xD;&#xA;xcopy /E /Y /C &quot;$(ProjectDir)\Lib\WinDivert\$(PlatformName)\*.dll&quot; &quot;$(TargetDir)\$(PlatformName)\&quot;&#xD;&#xA;xcopy /E /Y /C &quot;$(ProjectDir)\Lib\WinDivert\$(PlatformName)\*.sys&quot; &quot;$(TargetDir)\$(PlatformName)\&quot;" />
-  </Target>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<OutputPath>bin\Debug\x64\</OutputPath>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<OutputPath>bin\Debug\x86\</OutputPath>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\WinDivertSharp\WinDivertSharp.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="NUnit">
+			<Version>3.13.3</Version>
+		</PackageReference>
+		<PackageReference Include="NUnit.Console">
+			<Version>3.16.2</Version>
+		</PackageReference>
+		<PackageReference Include="NUnit3TestAdapter">
+			<Version>4.3.1</Version>
+		</PackageReference>
+		<PackageReference Include="PacketDotNet">
+			<Version>1.4.7</Version>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Update="$(ProjectDir)\Libs\WinDivert\$(Platform)\WinDivert.dll" Link="$(Platform)/%(Filename)%(Extension)">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="$(ProjectDir)\Libs\WinDivert\$(Platform)\WinDivert64.sys" Link="$(Platform)/%(Filename)%(Extension)">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="$(ProjectDir)\Libs\WinDivert\$(Platform)\WinDivert32.sys" Link="$(Platform)/%(Filename)%(Extension)">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+	
+	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+		<Exec Command="$(ProjectDir)\stopWinDivert.bat" />
+	</Target>
 </Project>
